syntax = "proto3";
package plugin.keystore_management.v1;

import "google/protobuf/struct.proto";
import "plugin/common/v1/common.proto";

service KeystoreManagement {
  rpc CreateKeystore(CreateKeystoreRequest) returns (CreateKeystoreResponse);
  rpc DeleteKeystore(DeleteKeystoreRequest) returns (DeleteKeystoreResponse);
}

message CreateKeystoreRequest {
  google.protobuf.Struct values = 1;
}

message CreateKeystoreResponse {
  plugin.common.v1.KeystoreInstanceConfig config = 1;
}

message DeleteKeystoreRequest {
  plugin.common.v1.KeystoreInstanceConfig config = 1;
}

message DeleteKeystoreResponse {}
